--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-p {
-color: red
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+
+    -webkit-font-smoothing: antialiased;
+    -webkit-overflow-scrolling: touch;
 }
   
