--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Ubuntu Mono", sans-serif;
     font-weight: 400;
     font-size: 16px;
-
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
+   
 }
   
+
+
+
