--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Ubuntu Mono", sans-serif;
+    font-family: 'Ubuntu Mono', sans-serif;
     font-weight: 400;
     font-size: 16px;
    
