--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Actor);
+
 body {
-    font-family: 'Ubuntu Mono', sans-serif;
+    font-family: 'Actor';
     font-weight: 400;
     font-size: 16px;
    
