--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ hr {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: 300px;
     border-style: inset;
     border-width: 1px;
 }
