--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Actor';      
     font-weight: 400;
     font-size: 16px;
-    background: #4682B4;
+    background: #EFEFEF;
     
 }
 
@@ -16,4 +16,5 @@ hr {
     margin-right: 300px;
     border-style: inset;
     border-width: 1px;
+    color: #FF383F
 }
