--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ h2 {
     background-color: #CAEBF2
 }
 
-a:link {
+a {
     background-color: #CAEBF2
-        color: #A9A9A9
+       /* color: #A9A9A9 */
         
 }
