--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h2 {
 a:link, a:visited {
     background-color: #CAEBF2;
     color: #A9A9A9;
-    padding: 14px 25px;
+    /* padding: 14px 25px; */
     text-align: center; 
     text-decoration: none;
     display: inline-block;
