--- a/style.css
+++ b/style.css
@@ -21,11 +21,12 @@ hr {
 
 h1 {
     color: #FF383F;
+    margin-right: 300px;
 }
 
 h2 {
-    
     background-color: #CAEBF2;
+    margin-right: 300px;
 }
 
 /* a {
