--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Actor);
 
 body {
-    font-family: 'Actor';      
+    font-family: 'Actor';
     font-weight: 400;
     font-size: 16px;
     background: #EFEFEF;
-    
+
 }
 
 hr {
@@ -29,19 +29,45 @@ h2 {
     margin-right: 300px;
 }
 
-/* a {
-    background-color: #CAEBF2;
-    text-decoration: none;
-     /* color: #A9A9A9 
-        
-} */ 
+#parallax {
+    background-image: url("headshot.jpg");
+    height: 500px;
+    background-attachment: fixed;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: 600px;
+
+}
 
 
+#logistics h1 {
+  text-align: center;
+  padding-left: 300px;
+}
+
+#logistics ul {
+  list-style-type: none;
+  margin: 0;
+
+  text-align: center;
+  overflow: hidden;
+
+}
+
+#logistics li {
+  float: left;
+  padding-left: 20px;
+}
+
+#objective h2 {
+  background-color: #CAEBF2;
+  margin-right: 300px;
+
+}
 a:link, a:visited {
     background-color: #CAEBF2;
     color: #A9A9A9;
-    /* padding: 14px 25px; */
-    text-align: center; 
+    text-align: center;
     text-decoration: none;
     display: inline-block;
 }
